# SparseOps

./: .gitignore  CMakeLists.txt  README.md  alldatasets.txt  detect_plat.sh  resdatasets.txt  runable_casesets.txt  runable_datasets.txt  runable_datasets_results.csv  scp_data.sh  testdatasets.txt
data/: download_datasets.py
docs/: README_LSH_MinHash_Hierarchical_Clustering.md  cluster_array_spgemm_design.md
figs/fig10/: README.md  ReorderDraw.xlsx  plot_reordering_ablation.py
figs/fig11/: Preprocess_Time.xlsx  README.md  plot_preprocessing_runs.py
figs/fig12/: Preprocess_Mem.xlsx  README.md  plot_preprocessing_memory.py
figs/fig13/: 20_perf_bd.xlsx  README.md  plot_runtime_breakdown.py
figs/fig6/: README.md  hyper_params.xlsx  plot_compactness.py  run_accumulator.sh
figs/fig7/: README.md  plot_l2_budget.py  run_l2_fraction.sh  run_l2_volume.sh
figs/fig8/: AMD_draw.xlsx  README.md  benchmarks.xlsx  plot_performance_3platform.py
figs/fig9/: 20_perf.xlsx  README.md  plot_20_perf.py
include/: LeSpMV.h  SpOps.h  cmdline.h  csr5_utils.h  general_config.h  memopt.h  mmio.h  plat_config.h  rdtsc.h  sparse_conversion.h  sparse_features.h  sparse_format.h  sparse_io.h  sparse_operation.h  sparse_partition.h  spgemm.h  spgemm_Flength_array.h  spgemm_Flength_hash.h  spgemm_MinHashLSH.h  spgemm_Vlength_array.h  spgemm_Vlength_hash.h  spgemm_Vlength_mixed.h  spgemm_array.h  spgemm_bin.h  spgemm_cluster.h  spgemm_hash.h  spgemm_utility.h  spmv_benchmark.h  spmv_bsr.h  spmv_coo.h  spmv_csr.h  spmv_csr5.h  spmv_dia.h  spmv_ell.h  spmv_s_ell.h  spmv_sell_c_R.h  spmv_sell_c_sigma.h  spmv_testroutine.h  thread.h  timer.h
script/: compare_candidate_pairs.py  compare_results.py  compare_results_flength.py  compare_results_hc.py  compare_results_reordered.py  compare_results_rowwise.py  compare_results_vlength.py  compare_results_vlength_hc_lsh.py  parse_run_test_hc_output.py  process_best_results.py  run_baseline_mkl_spgemm.py  run_fcluster_spgemm.py  run_record_permutation_lsh_list.py  run_rowwise_spgemm.py  run_test_hc_AAt.out  run_test_hc_AAt_results.csv  run_test_reordered_spgemm_hc_lsh.sh  run_test_spgemm_hc.sh  run_test_spgemm_hc_lsh_list.py  run_test_spgemm_lsh_list.py  run_test_spgemm_lsh_maxmem_list.py  tune_k_bands_hc_lsh.py
src/: sparse_features.cpp  spgemm.cpp  spgemm_Flength_array.cpp  spgemm_Flength_hash.cpp  spgemm_Vlength_array.cpp  spgemm_Vlength_hash.cpp  spgemm_Vlength_mixed.cpp  spgemm_array.cpp  spgemm_bin.cpp  spgemm_cluster.cpp  spgemm_hash.cpp  spmv_benchmark.cpp  spmv_bsr.cpp  spmv_compare.cpp  spmv_coo.cpp  spmv_csr.cpp  spmv_csr5.cpp  spmv_dia.cpp  spmv_ell.cpp  spmv_s_ell.cpp  spmv_sell_c_R.cpp  spmv_sell_c_sigma.cpp
test/: Get_features.cpp  Microbench_accumulator.cpp  Save_coomat_for_plot.cpp  baseline_mkl_csr.cpp  baseline_mkl_spgemm.cpp  benchmark_spmv_bsr.cpp  benchmark_spmv_coo.cpp  benchmark_spmv_csr.cpp  benchmark_spmv_csr5.cpp  benchmark_spmv_dia.cpp  benchmark_spmv_ell.cpp  benchmark_spmv_sell.cpp  benchmark_spmv_sell_c_R.cpp  benchmark_spmv_sell_c_sigma.cpp  generate_candidate_pairs.cpp  record_permutation_lsh.cpp  sycl_oneapi_spmv.cpp  test_bsr_format.cpp  test_csr5_format.cpp  test_dia_format.cpp  test_ell_lb_partition.cpp  test_minhash_lsh.cpp  test_reordered_spgemm.cpp  test_reordered_spgemm_hc_lsh.cpp  test_sell_c_sigma_format.cpp  test_sell_format.cpp  test_spgemm.cpp  test_spgemm_flength.cpp  test_spgemm_hc.cpp  test_spgemm_hc_lsh.cpp  test_spgemm_lsh.cpp  test_spgemm_vlength.cpp
utils/: mmio.cpp  partition.cpp  sparse_io.cpp  test_spmv_bsr.cpp  test_spmv_coo.cpp  test_spmv_csr.cpp  test_spmv_csr5.cpp  test_spmv_dia.cpp  test_spmv_ell.cpp  test_spmv_sell.cpp  test_spmv_sell_c_R.cpp  test_spmv_sell_c_sigma.cpp  thread.cpp
